--- a/sass/components/_error.scss
+++ b/sass/components/_error.scss
@@ -6,6 +6,7 @@
   animation-iteration-count: 3;
   animation-duration: 0.1s;
   animation-timing-function: linear;
+  margin-bottom: 5px;
 
   &::after {
     content: "!";
