--- a/sass/components/_inputs.scss
+++ b/sass/components/_inputs.scss
@@ -11,12 +11,12 @@ input {
 
   transition: box-shadow 0.2s, background-color 0.2s;
 
-  &:not(:placeholder-shown):not(:focus):not(.amount):invalid {
-    box-shadow: $medium_inner, 0px 0px 4px $red_clr;
-  }
-  &:not(:placeholder-shown):not(:focus):not(.amount):valid {
-    box-shadow: $medium_inner, 0px 0px 2px $green_clr;
-  }
+  // &:not(:placeholder-shown):not(:focus):not(.amount):invalid {
+  //   box-shadow: $medium_inner, 0px 0px 4px $red_clr;
+  // }
+  // &:not(:placeholder-shown):not(:focus):not(.amount):valid {
+  //   box-shadow: $medium_inner, 0px 0px 2px $green_clr;
+  // }
 
   &::placeholder {
     color: $para_clr;
